Fix userAnonymous count